Page settings: fixed some bugs on smaller viewport widths

--- a/src/css/boom/page/settings.less
+++ b/src/css/boom/page/settings.less
@@ -134,8 +134,10 @@
 					background: @light-grey;
 				}
 
-				+ .b-button-withtext {
-					margin-left: 1.5rem;
+				@media all and (min-width: 850px) {
+					+ .b-button-withtext {
+						margin-left: 1.5rem;
+					}
 				}
 			}
 		}
@@ -157,12 +159,21 @@
 	top: 0;
 	left: 60px;
 	max-width: 0;
-	width: 100%;
+	width: calc(~"100% - 60px");
 	transition: all 1s;
 	overflow: hidden;
 
 	&.open {
 		max-width: 5000px;
 		transition: all 1s;
+	}
+}
+
+@media all and (max-width: 768px) {
+	.b-page-settings {
+		.b-page-settings-menu li a, .b-page-settings-content {
+			padding-left: 2rem;
+			padding-right: 2rem;
+		}
 	}
 }
